# serveez-mg

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README-Win32  README-alpha  README-cross  RELEASE  THANKS  TODO  acinclude.m4  autodsp  autogen.sh  config.h.serveez  configure.ac  configure.in  coverage.sh  debian.sh.in  redhat.sh.in  serveez.ap  vcgen.bat  version.h.serveez
CVS/: Entries  Repository
data/: ChangeLog  Makefile.am  PLATFORMS  guile-projects.txt  init.serveez.in  irc-MOTD.txt  serveez.cfg
data/CVS/: Entries  Repository
doc/: .cvsignore  ChangeLog  Makefile.am  guile-api.texi  guile-api.texi.in  index.html  serveez-api.texi.in  serveez-config.1  serveez-doc-snarf.awk  serveez-mg.html  serveez-mg.texi  serveez-mg.txt  serveez.1  serveez.en.html  serveez.texi
doc/CVS/: Entries  Repository
m4/: Makefile.am  gnulib-cache.m4
src/: .cvsignore  ChangeLog  Makefile.am  cfgfile.c  cfgfile.h  getpass.c  getpass.h  getpasswd.c  guile-api.c  guile-api.h  guile-bin.c  guile-bin.h  guile-compat.h  guile-server.c  guile-server.h  guile.c  guile.h  lib.scm  lib.scm.m4  libserveez.h  mkpassword.ap  mkpassword.c  option.c  option.h  serveez-config.in  serveez.ap  serveez.c  serveez.h  serveez.m4  serveez.rc  serveez.scm  svzconfig.h.in  svzconfig.h.serveez  version.h.in
src/CVS/: Entries  Repository
src/awcs-server/: Makefile.am  awcs-proto.c  awcs-proto.h
src/awcs-server/CVS/: Entries  Repository
src/ctrl-server/: Makefile.am  control-proto.c  control-proto.h
src/ctrl-server/CVS/: Entries  Repository
src/fakeident-server/: Makefile.am  ident-proto.c  ident-proto.h
src/fakeident-server/CVS/: Entries  Repository
src/foo-server/: Makefile.am  foo-proto.c  foo-proto.h
src/foo-server/CVS/: Entries  Repository
src/guile-server/: Makefile.am  echo-server.scm  eval-server.scm  hello.scm  icecast-server.scm  inetd.scm  mandel-client.scm  mandel-server.scm  mandel-shared.scm
src/guile-server/CVS/: Entries  Repository
src/http-server/: Makefile.am  http-cache.c  http-cache.h  http-cgi.c  http-cgi.h  http-core.c  http-core.h  http-dirlist.c  http-dirlist.h  http-proto.c  http-proto.h
src/http-server/CVS/: Entries  Repository
src/irc-core/: Makefile.am  irc-core.c  irc-core.h
src/irc-core/CVS/: Entries  Repository
src/irc-server/: Makefile.am  irc-config.c  irc-config.h  irc-crypt.c  irc-crypt.h  irc-event-1.c  irc-event-2.c  irc-event-3.c  irc-event-4.c  irc-event-5.c  irc-event-6.c  irc-event-7.c  irc-event.h  irc-proto.c  irc-proto.h  irc-server.c  irc-server.h
src/irc-server/CVS/: Entries  Repository
src/libserveez/: .cvsignore  ChangeLog  Makefile.am  alloc.c  alloc.h  array.c  array.h  asprintf.c  asprintf.h  binding.c  binding.h  boot.c  boot.h  cfg.c  cfg.h  configure.ac  core.c  core.h  defines.h  dynload.c  dynload.h  hash.c  hash.h  icmp-socket.c  icmp-socket.h  interface.c  interface.h  ipdata.h  iphlpapi.h  libserveez.ap  libserveez.h  mutex.c  mutex.h  passthrough.c  passthrough.h  pipe-socket.c  pipe-socket.h  portcfg.c  portcfg.h  raw-socket.c  (+27 more)
src/libserveez/CVS/: Entries  Repository  Root
src/libserveez/codec/: Makefile.am  bzip2.c  bzip2.h  codec.c  codec.h  gzlib.c  gzlib.h
src/libserveez/codec/CVS/: Entries  Repository
src/libserveez/coserver/: Makefile.am  coserver.c  coserver.h  dns.c  dns.h  ident.c  ident.h  reverse-dns.c  reverse-dns.h
src/libserveez/coserver/CVS/: Entries  Repository
src/nut-server/: Makefile.am  gnutella.c  gnutella.h  nut-core.c  nut-core.h  nut-hostlist.c  nut-hostlist.h  nut-request.c  nut-request.h  nut-route.c  nut-route.h  nut-transfer.c  nut-transfer.h
src/nut-server/CVS/: Entries  Repository
src/prog-server/: Makefile.am  prog-server.c  prog-server.h
src/prog-server/CVS/: Entries  Repository
src/sntp-server/: Makefile.am  sntp-proto.c  sntp-proto.h
src/sntp-server/CVS/: Entries  Repository
src/tunnel-server/: Makefile.am  tunnel.c  tunnel.h
src/tunnel-server/CVS/: Entries  Repository
test/: .cvsignore  ChangeLog  Makefile.am  array-test.c  array.ap  binary-test.scm  codec-test.c  codec.ap  guile-server-test.scm  hash-test.c  hash.ap  prog-test.c  prog-test.cfg  prog.ap  server-test.scm  spvec-test.c  spvec.ap  test-guile  test-guile.cfg  test-http-get  test-http-get.cfg  test-suite.scm  test.c  test.h  vector-test.c  vector.ap
test/CVS/: Entries  Repository
